# FishyJoes

./: .gitignore  .swiftlint.yml  CONTRIBUTOR-AGREEMENT.md  FishyJoes.swifttemplate  Package.resolved  Package.swift  README.md  cdecl.swifttemplate  cdeclare.swifttemplate  diff.diff  package-lock.json  package.json  sonar-project.properties
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: c-sharp-runtime.yaml  coverage.yaml  dart-runtime.yaml  integration-tests.yaml  iota-runtime.yaml  iota-runtime.yaml.DISABLED  iota-runtime.yaml.disabled  java-runtime.yaml  java-runtime.yaml.DISABLED  mac.yml  node-runtime.yaml  node-runtime.yaml.disabled  (+3 more)
c-sharp-runtime/: Cricut.FishyJoesRuntime.csproj  c-sharp-runtime.sln
dart-runtime/: analysis_options.yaml  npm_flutter_package.json  npm_flutter_pubspec.yaml  package.json  pubspec.yaml
documentation/: FishyJoes Hello World.txt  bindings-structure.txt  cans-and-cannots.md  downstream-repo-dependencies.md  fishyjoes-explained.html  local-end-to-end.md  new-language-target-checklist.md  python-followups-plan.md  python-runtime-converter-tests-complete.md  python-runtime-converters-complete.md  python-runtime-implementation-plan.md  python-runtime-overall-status.md  python-runtime-phase1-progress.md  python-runtime-phase2-complete.md  python-runtime-progress-visual.md  python-runtime-summary.md  python-runtime-windows-session.md  python-support-current-audit-plan.md  python-support-plan.md  repo-writeup.md  windows-swift-5.10.x.md
js/: wasm-napi.js
kotlin-runtime/: .gitignore  VERSIONS  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
node-tests/: .gitignore  runner.js
python-runtime/: .gitignore  README.md  README.non-goals.md  _build_wheel.py  pyproject.toml  setup.py
python-runtime/fishyjoes_runtime/: __init__.py  _loader_collections.py  _loader_futures.py  _loader_primitives.py  _loader_tuples.py  loader.py  py.typed  result.py  swift_range.py  swift_reference.py  utilities.py
python-runtime/src/fishyjoes_python/: __init__.py  _native.c  _native.py  _native.pyi  attributed_string.py  callbacks.py  exceptions.py  generated_runtime.py  iota.py  loader.py  runtime.py
python-runtime/src/fishyjoes_python/iota/: __init__.py  _ffi.py  _handles.py  _runtime.py
python-runtime/src/fishyjoes_runtime/: __init__.py  __init__.pyi  config.py  dependencies.py  diagnostics.py  iota.py  native.py
python-runtime/tests/: __init__.py  _real_runtime.py  test_assume.py  test_attributed_string.py  test_callback_accumulation.py  test_cffi_thread_safety.py  test_concurrent_callbacks.py  test_converter_helpers.py  test_exception_roundtrip.py  test_generated_ast.py  test_generated_foundation_imports.py  test_generated_no_name_collision.py  test_generated_ruff_policy.py  test_generated_runtime_helpers.py  test_generated_typecheck.py  test_iota.py  test_iota_symbol_names.py  test_lint.py  test_logging.py  test_no_silent_skips.py  test_python_version.py  test_runtime.py  test_runtime_invariants.py  test_smoke.py  test_thread_scheduling.py
python-runtime/tests/duplicates/: README.md  test_iota_handle_coercion_and_release.py
scripts/: _read-tool-versions.sh  compile-android-runtime.sh  compile-c-sharp-runtime.sh  compile-dart-runtime.sh  compile-iota-runtime.sh  compile-kotlin-native-runtime.sh  compile-node-runtime.sh  compile-node-runtimes.sh  copy-linux-swift-stdlib.sh  gather-coverage.sh  generate-raw-coverage.sh  install-swift-wasm.sh  lcov-to-xml.sh  summarize-fishyjoes-crashes.py  swift-shim.bat  swift-shim.ps1
(+1002 files in other folders)
