[project]
name = "fishyjoes-runtime"
version = "0.0.1"
description = "Python-side FishyJoes binding layer for the shared Iota ABI"
requires-python = ">=3.11"
dependencies = [
  "cffi",
  "packaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fishyjoes_runtime"]
